# test-bazel-cpp-tutorial

./: .gitignore  CMakeLists.txt  README.md
hello-greet-lib/: hello-greet.cc
stage2/main/: hello-greet.cc  hello-world.cc
stage4/: WORKSPACE
stage4/main/: BUILD  hello-world.cc
stage5/: WORKSPACE
stage5/main/: BUILD  hello-world.cc
stage6/main/: hello-world.cc
stage7/: WORKSPACE
stage7/protos/: BUILD
stage8/protos/: BUILD
stage8/src/: BUILD
